# backup-server

./: .gitignore  CLAUDE.md  Cargo.toml  ecosystem.config.cjs  package-lock.json  package.json  tsconfig.base.json
backup-agent/: Cargo.toml  DEPLOYMENT.md  config.production.toml  config.toml  deploy-local.sh  deploy.sh
backup-agent/src/: config.rs  lib.rs  main.rs  update.rs
backup-agent/src/api/: auth.rs  backup.rs  filesystem.rs  health.rs  job_tracker.rs  mod.rs
backup-agent/src/daemon/: mod.rs  pid.rs  shutdown.rs  signals.rs
backup-agent/src/executor/: manifest.rs  mod.rs
backup-agent/src/fs/: metadata.rs  mod.rs  walker.rs
backup-agent/src/sync/: apply.rs  delta.rs  mod.rs  signature.rs
backup-agent/src/transfer/: chunked.rs  mod.rs  progress.rs  progress_stream.rs
backup-agent/src/utils/: errors.rs  logger.rs  mod.rs
backup-agent/src/ws/: README.md  client.rs  handler.rs  mod.rs
backup-server-rs/: Cargo.toml
backup-server-rs/src/: config.rs  error.rs  main.rs  state.rs
backup-server-rs/src/db/: connection.rs  migrate.rs
backup-server-rs/src/models/: backup_job.rs  backup_version.rs  mod.rs  server.rs  settings.rs
backup-server-rs/src/routes/: agent.rs  explorer.rs  files.rs  jobs.rs  mod.rs  servers.rs  storage.rs  versions.rs
backup-server-rs/src/services/: agent_deployer.rs  agent_orchestrator.rs  backup_migration.rs  backup_scheduler.rs  db_backup.rs  mod.rs  path_migration.rs  server_ping.rs
backup-server-rs/src/utils/: semaphore.rs
backup-server-rs/src/ws/: agent_registry.rs  mod.rs  ui.rs
client/: index.html  package.json  tsconfig.tsbuildinfo
client/src/: App.tsx  main.tsx
client/src/api/: endpoints.ts
client/src/components/: BackupJobForm.tsx  BackupProgress.scss  BackupProgress.tsx  CronInput.tsx  FileExplorer.scss  FileExplorer.tsx  JobDetailPanel.scss  JobDetailPanel.tsx  Layout.scss  Layout.tsx  LocalFileExplorer.scss  LocalFileExplorer.tsx  PageHeader.scss  PageHeader.tsx  ServerForm.tsx  StatusBadge.scss  StatusBadge.tsx  StorageHierarchyTree.scss  StorageHierarchyTree.tsx
client/src/hooks/: useBackupJobs.ts  useServerPing.ts  useServers.ts  useStorage.ts  useStorageHierarchy.ts  useVersions.ts  useWebSocket.ts
client/src/pages/: BackupJobs.scss  BackupJobs.tsx  Dashboard.scss  Dashboard.tsx  ServerDetail.scss  ServerDetail.tsx  Servers.scss  Servers.tsx  Storage.scss  Storage.tsx
client/src/styles/: _mixins.scss  _variables.scss  global.scss
server/: package.json
server/server/data/backups/test-debug2/: test.txt
server/src/: app.ts  config.ts  index.ts
server/src/db/: connection.ts  migrate.ts  schema.sql
server/src/models/: backupJob.ts  backupVersion.ts  server.ts  settings.ts
server/src/routes/: agent.ts  backupJobs.ts  explorer.ts  files.ts  servers.ts  ssh.ts  storage.ts  versions.ts
server/src/services/: agentClient.ts  agentDeployer.ts  agentOrchestrator.ts  backupMigration.ts  backupOrchestrator.ts  backupScheduler.ts  dbBackup.ts  localExplorer.ts  pathMigration.ts  remoteExplorer.ts  remoteProvisioner.ts  rsyncRunner.ts  serverPingService.ts  sshConnectionPool.ts  sshKeyManager.ts  versionCleanup.ts
server/src/utils/: logger.ts  retry.ts  semaphore.ts
server/src/websocket/: agentRegistry.ts  events.ts  server.ts
