[workspace]
members = ["backup-agent", "backup-server-rs"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
tokio-tungstenite = "0.24"
futures-util = "0.3"
bytes = "1.9"
zstd = "0.13"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
