[package]
name = "backup-agent"
version = "1.0.0"
edition = "2021"
authors = ["Backup Server Team"]
description = "Rust-based backup agent with delta-sync capabilities"
license = "MIT OR Apache-2.0"

[[bin]]
name = "backup-agent"
path = "src/main.rs"

[dependencies]
# Delta-sync (SIMD-optimized rolling hash)
fast_rsync = "0.2"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }

# HTTP server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# WebSocket
tokio-tungstenite = "0.24"
futures-util = "0.3"
bytes = "1.9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Process management
nix = { version = "0.30", features = ["signal", "user"] }

# Compression
zstd = "0.13"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# File system
walkdir = "2.5"

# HTTP client (for server communication)
reqwest = { version = "0.12", features = ["json", "stream"] }

# UUID generation
uuid = { version = "1.11", features = ["v4", "serde"] }

# Hostname detection
hostname = "0.4"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
# Testing
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
